Remove possibility to create ticke from support team

--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -76,7 +76,7 @@ Date: <%= @ticket.created_at %>
   </p>
 <% end %>
 
-<% if session[:user_id] %>
+<% unless session[:user_id] %>
 <%= link_to 'New ticket', action: 'new', controller: 'tickets' %>
 |
 <% end %>
