--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,80 +1,8 @@
-<h1>You problem has reported to the support team:</h1>
-
-Date: <%= @ticket.created_at %>
-
-<% @support = Support.find_by(id: @ticket.owner_id) %>
-
-<% if !@support.nil? %>
-  <p>
-    <strong>Owner:</strong> <font color='green'><%= @support.login %></font>
-  </p>
-<% else %>
-  <p>
-    <strong>Owner:</strong> <font color='red'>Customer</font>
-  </p>
+<% unless session[:user_id] %>
+  <h1>You problem has reported to the support team:</h1>
 <% end %>
 
-<p>
-  <strong>Username:</strong>
-  <%= @ticket.username %>
-</p>
-
-<p>
-  <strong>E-mail:</strong>
-  <%= @ticket.email %>
-</p>
-
-<p>
-  <strong>Subject:</strong>
-  <%= @ticket.subject %>
-</p>
-
-<p>
-  <strong>Problem:</strong>
-  <%= @ticket.problem %>
-</p>
-
-<p>
-  <strong>Generated unique UUID:</strong>
-  <%= @ticket.uuid %>
-</p>
-
-<h2>Comments</h2>
-<% @ticket.comments.each do |comment| %>
-  <%
-    # puts '=== comment.owner_id: ' + comment.owner_id.to_s
-    if comment.owner_id == session[:user_id]
-      color = 'green'
-    else
-      color = 'red'
-    end
-  %>
-
-  <p>
-    <font color="<%= color %>"
-    <strong>Comment [<%= comment.id %>] created at <%= comment.created_at %>:</strong><br>
-    <%= comment.body %>
-    </font>
-  </p>
-
-  <% if comment.owner_id == session[:user_id] %>
-    <p>
-      <%= link_to 'Destroy Comment', [comment.ticket, comment], method: :delete, data: { confirm: 'Are you sure?' } %>
-    </p>
-  <% end %>
-<% end %>
-
-<h2>Add a comment:</h2>
-<%= form_for ([@ticket, @ticket.comments.build]) do |f| %>
-  <%= f.hidden_field :owner_id, value: session[:user_id] %>
-  <p>
-    <%= f.label :body %><br>
-    <%= f.text_area :body, cols: 60, rows: 10 %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<%= render 'form' %>
 
 <% unless session[:user_id] %>
 <%= link_to 'New ticket', action: 'new', controller: 'tickets' %>
