--- a/app/views/supports/new.html.erb
+++ b/app/views/supports/new.html.erb
@@ -3,8 +3,8 @@
 <%= form_for :support, url: supports_path do |f| %>
 
   <% if @support.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@support.errors.count, "error") %> prohibited this support from being saved:</h2>
+    <div id='error_explanation'>
+      <h2><%= pluralize(@support.errors.count, 'error') %> prohibited this support from being saved:</h2>
       <ul>
         <% @support.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
@@ -39,10 +39,9 @@
     <%= f.text_field :email %>
   </p>
 
-  <% @roles = Role.all %>
   <p>
     <%= f.label :Role %>:
-    <select name = "selected_role">
+    <select name='selected_role'>
       <% @roles.each do |role| %>
           <% if role.name == 'Guest' %>
             <option value = "<%= role.id %>" selected>
