--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -28,6 +28,7 @@
 <%= link_to 'Tickets', controller: 'tickets' %>
 | <%= link_to 'Supports', controller: 'supports' %>
 | <%= link_to 'Roles', controller: 'roles' %>
+| <%= link_to 'States', controller: 'ticket_states' %>
 <br><br>
 <% end %>
 
