--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -3,15 +3,19 @@
 <table border='1' >
   <tr>
     <th width=10%>UUID</th>
+    <th width=15%>State</th>
+    <th width=5%>Owner</th>
     <th width=10%>Username</th>
     <th width=10%>E-mail</th>
-    <th width=30%>Subject</th>
+    <th width=15%>Subject</th>
     <th>Problem</th>
   </tr>
 
   <% @tickets.each do |ticket| %>
     <tr>
       <td><%= ticket.uuid %></td>
+      <td><%= @states[ticket.status_id-1].name %></td>
+      <td><%= @supports[ticket.owner_id-1].login %></td>
       <td><%= ticket.username %></td>
       <td><%= ticket.email %></td>
       <td><%= ticket.subject %></td>
