Changed status and owner id selection

--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -1,6 +1,6 @@
 <% if !@support.nil? %>
     <p>
-      <strong>Owner:</strong> <font color='green'><%= @support.login %></font>
+      <strong>Owner:</strong> <font color='green'><%= @support.full_name %></font>
     </p>
 <% else %>
     <p>
