--- a/app/views/tickets/show_by_uuid.html.erb
+++ b/app/views/tickets/show_by_uuid.html.erb
@@ -5,5 +5,5 @@
     <%= link_to 'Back', controller: 'tickets' %>
 <% else %>
     <%= link_to 'New ticket', action: 'new', controller: 'tickets' %>
-    <%= link_to 'Home', controller: 'welcome' %>
+    | <%= link_to 'Home', controller: 'welcome' %>
 <% end %>
