--- a/app/views/supports/show.html.erb
+++ b/app/views/supports/show.html.erb
@@ -20,7 +20,6 @@
 
 <br>
 
-<%= link_to 'Another new support', action: 'new', controller: 'supports' %>
-| <%= link_to 'Home', controller: 'welcome' %>
+<%= link_to 'Home', controller: 'welcome' %>
+| <%= link_to 'New support', action: 'new', controller: 'supports' %>
 | <%= link_to 'Edit', edit_support_path(@support) %>
-
