--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -14,11 +14,8 @@
   <% @tickets.each do |ticket| %>
     <tr>
       <td><%= ticket.uuid %></td>
-
-      <!-- Look to the join! -->
-      <td><%= @states[ticket.status_id-1].name %></td>
-      <td><%= @supports[ticket.owner_id-1].login %></td>
-
+      <td><%= ticket.current_status %></td>
+      <td><%= ticket.current_support %></td>
       <td><%= ticket.username %></td>
       <td><%= ticket.email %></td>
       <td><%= ticket.subject %></td>
