--- a/app/views/supports/edit.html.erb
+++ b/app/views/supports/edit.html.erb
@@ -3,8 +3,8 @@
 <%= form_for :support, url: support_path(@support), method: :patch do |f| %>
 
   <% if @support.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@support.errors.count, "error") %> prohibited this support from being saved:</h2>
+    <div id='error_explanation'>
+      <h2><%= pluralize(@support.errors.count, 'error') %> prohibited this support from being saved:</h2>
       <ul>
         <% @support.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
