--- a/app/views/roles/_form.html.erb
+++ b/app/views/roles/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@role) do |f| %>
   <% if @role.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@role.errors.count, "error") %> prohibited this role from being saved:</h2>
+    <div id='error_explanation'>
+      <h2><%= pluralize(@role.errors.count, 'error') %> prohibited this role from being saved:</h2>
 
       <ul>
       <% @role.errors.full_messages.each do |message| %>
@@ -11,16 +11,16 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class='field'>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
-  <div class="field">
+  <div class='field'>
     <%= f.label :description %><br>
     <%= f.text_field :description %>
   </div>
 
-  <div class="actions">
+  <div class='actions'>
     <%= f.submit %>
   </div>
 <% end %>
