--- a/app/views/ticket_states/_form.html.erb
+++ b/app/views/ticket_states/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@ticket_state) do |f| %>
   <% if @ticket_state.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@ticket_state.errors.count, "error") %> prohibited this ticket_state from being saved:</h2>
+    <div id='error_explanation'>
+      <h2><%= pluralize(@ticket_state.errors.count, 'error') %> prohibited this ticket_state from being saved:</h2>
 
       <ul>
       <% @ticket_state.errors.full_messages.each do |message| %>
@@ -11,11 +11,11 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class='field'>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
-  <div class="actions">
+  <div class='actions'>
     <%= f.submit %>
   </div>
 <% end %>
