Modify css and included partial render for tickets and supports form

--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -16,7 +16,9 @@
         <td><%= role.description %></td>
 
         <td><%= link_to 'Edit', edit_role_path(role) %></td>
-        <td><%= link_to 'Destroy', role, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if session[:role_name] == 'admin' %>
+          <td><%= link_to 'Destroy', role, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
