--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,3 +1,39 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.form_login {
+  border-style: solid;
+  border-width: 2px;
+  border-color: darkgoldenrod;
+
+  background-color:lightgoldenrodyellow;
+}
+
+.form_search {
+  border-style: solid;
+  border-width: 2px;
+  border-color: darkgoldenrod;
+
+  margin-top: 20px;
+
+  background-color:lightgoldenrodyellow;
+}
+
+.form_field {
+  margin: 5px;
+}
+
+.link_logout {
+  font-weight: bold;
+
+  background-color:lightsalmon;
+}
+
+.link_newticket {
+  margin-top: 10px;
+
+  font-weight: bold;
+
+  background-color:lightsalmon;
+}
