--- a/app/views/ticket_states/index.html.erb
+++ b/app/views/ticket_states/index.html.erb
@@ -14,7 +14,9 @@
         <td><%= ticket_state.name %></td>
 
         <td><%= link_to 'Edit', edit_ticket_state_path(ticket_state) %></td>
-        <td><%= link_to 'Destroy', ticket_state, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if session[:role_name] == 'admin' %>
+          <td><%= link_to 'Destroy', ticket_state, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
