--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,6 +1,6 @@
 <h1> Listing tickets</h1>
 
-<table border='1' >
+<table border='1'>
   <tr>
     <th width=10%>UUID</th>
     <th width=15%>State</th>
@@ -11,26 +11,13 @@
     <th>Problem</th>
   </tr>
 
+  <tbody>
   <% @tickets.each do |ticket| %>
-    <tr>
-      <td><%= ticket.uuid %></td>
-      <td><%= ticket.current_status %></td>
-      <td><%= ticket.current_support %></td>
-      <td><%= ticket.username %></td>
-      <td><%= ticket.email %></td>
-      <td><%= ticket.subject %></td>
-      <td><%= ticket.problem %></td>
-
-      <td width=4%><%= link_to 'Show', ticket_path(ticket) %></td>
-      <td width=4%><%= link_to 'Edit', edit_ticket_path(ticket) %></td>
-
-      <% if session[:login] == 'root' %>
-        <td width=4%><%= link_to 'Destroy', ticket_path(ticket), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      <% end %>
-    </tr>
+      <%= render partial: 'table_row', locals: {ticket: ticket} %>
   <% end %>
+  </tbody>
 </table>
 
-<br><br>
+<br>
 
 <%= link_to 'Home', action: 'index', controller: 'welcome' %>
