Refactor code and create new design

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,12 @@
  *
  *= require_tree .
  *= require_self
+ *= require layout
+ *= require navigation
+ *= require notifications
+ *= require text
+ *= require forms
  */
+
+table tr.even td { background-color: linen; }
+table tr.odd td { background-color: lightblue; }
