--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -9,9 +9,10 @@
 }
 
 .comment_body {
-  color: green;
-  background-color:lemonchiffon;
-  margin-top: 10px;
+  background-color: #fffddf;
+  border: 1px dotted #9f9b63;
+  overflow: auto;
+  padding: 1em;
 }
 
 .header1 {
