--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,13 @@
 <head>
   <title>Hulalula</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
+  <%#= javascript_include_tag 'http://www.google.com/jsapi' %>
+  <%= javascript_include_tag 'http://code.jquery.com/ui/1.11.0/jquery-ui.js' %>
+
+  <%= javascript_include_tag 'tickets.js' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
