--- a/app/views/roles/_form.html.erb
+++ b/app/views/roles/_form.html.erb
@@ -13,11 +13,11 @@
 
   <div class='field'>
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= raw f.text_field :name %>
   </div>
   <div class='field'>
     <%= f.label :description %><br>
-    <%= f.text_field :description %>
+    <%= raw f.text_field :description %>
   </div>
 
   <div class='actions'>
