--- a/app/views/ticket_states/new.html.erb
+++ b/app/views/ticket_states/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', ticket_states_path %>
+<%= link_to 'Back', controller: 'welcome', action: 'index', anchor: 'states' %>
