--- a/app/assets/stylesheets/tickets.css.scss
+++ b/app/assets/stylesheets/tickets.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the tickets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.status {
+  color: blue;
+}
+
+.owner_support {
+  color: green;
+}
+
+.owner_customer {
+  color: red;
+  font-weight: bold;
+}
