--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -2,12 +2,16 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.label {
+  text-align: right;
+}
+
 .form_login {
   border-style: solid;
   border-width: 2px;
   border-color: darkgoldenrod;
 
-  background-color:lightgoldenrodyellow;
+  background-color: lightgoldenrodyellow;
 }
 
 .form_search {
@@ -15,9 +19,9 @@
   border-width: 2px;
   border-color: darkgoldenrod;
 
-  margin-top: 20px;
+//  margin-top: 20px;
 
-  background-color:lightgoldenrodyellow;
+  background-color: lightgoldenrodyellow;
 }
 
 .form_field {
@@ -27,13 +31,17 @@
 .link_logout {
   font-weight: bold;
 
-  background-color:lightsalmon;
+  background-color: lightsalmon;
 }
 
 .link_newticket {
   margin-top: 10px;
+  margin-bottom: 10px;
 
+  //color: yellow;
   font-weight: bold;
 
-  background-color:lightsalmon;
+  //height: 30px;
+  //background-color: limegreen;
 }
+
