--- a/app/views/supports/_index.html.erb
+++ b/app/views/supports/_index.html.erb
@@ -1,4 +1,4 @@
-<h1> Listing supports</h1>
+<!-- <h1> Listing supports</h1> -->
 
 <% @roles = Role.all %>
 
@@ -13,11 +13,13 @@
   </tr>
 
   <% @supports.each do |support| %>
-      <%= render partial: 'table_row', locals: {support: support} %>
+      <%= render partial: 'supports/table_row', locals: {support: support} %>
   <% end %>
 </table>
 
-<br><br>
+<br>
 
 <%= link_to 'Home', action: 'index', controller: 'welcome' %>
-| <%= link_to 'New Support', new_support_path %>
+<% if session[:role_name] == 'admin' %>
+    | <%= link_to 'New Support', new_support_path %>
+<% end %>
