--- a/app/views/supports/_table_row.html.erb
+++ b/app/views/supports/_table_row.html.erb
@@ -1,12 +1,12 @@
-<tr>
-  <td><%= support.login %></td>
-  <td><%= support.password %></td>
-  <td><%= support.first_name%></td>
-  <td><%= support.last_name %></td>
-  <td><%= support.email %></td>
+<tr class="<%= cycle("even", "odd")%>">
+  <td><%= raw support.login %></td>
+  <td><%= raw support.password %></td>
+  <td><%= raw support.first_name%></td>
+  <td><%= raw support.last_name %></td>
+  <td><%= raw support.email %></td>
   <!-- need review -->
   <% role = @roles.find_by id: support.role_id %>
-  <td><%= role.name %></td>
+  <td><%= raw role.name %></td>
 
   <td width=4%><%= link_to 'Edit', edit_support_path(support) %></td>
   <% if session[:role_name] == 'admin' %>
