--- a/app/views/supports/edit.html.erb
+++ b/app/views/supports/edit.html.erb
@@ -16,27 +16,27 @@
 
   <p>
     <%= f.label :login %>
-    <%= f.text_field :login %>
+    <%= raw f.text_field :login %>
   </p>
 
   <p>
     <%= f.label :password %>
-    <%= f.password_field :password %>
+    <%= raw f.password_field :password %>
   </p>
 
   <p>
     <%= f.label :first_name %>:
-    <%= f.text_field :first_name %>
+    <%= raw f.text_field :first_name %>
   </p>
 
   <p>
     <%= f.label :last_name %>:
-    <%= f.text_field :last_name %>
+    <%= raw f.text_field :last_name %>
   </p>
 
   <p>
     <%= f.label :email %>:
-    <%= f.text_field :email %>
+    <%= raw f.text_field :email %>
   </p>
 
   <p>
@@ -44,4 +44,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', supports_path %>
+<%= link_to 'Back', :back %>
