--- a/app/views/ticket_states/index.html.erb
+++ b/app/views/ticket_states/index.html.erb
@@ -1,28 +1,33 @@
-<h1>Listing Ticket States</h1>
+<!-- <h1>Listing Ticket States</h1> -->
 
-<table border='1'>
-  <thead>
-    <tr>
-      <th width=50%>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @ticket_states.each do |ticket_state| %>
+<% if @ticket_states %>
+    <table border='1'>
+      <thead>
       <tr>
-        <td><%= ticket_state.name %></td>
-
-        <td><%= link_to 'Edit', edit_ticket_state_path(ticket_state) %></td>
-        <% if session[:role_name] == 'admin' %>
-          <td><%= link_to 'Destroy', ticket_state, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
+        <th width=50%>Name</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      </thead>
+
+      <tbody>
+      <% @ticket_states.each do |ticket_state| %>
+          <tr class="<%= cycle("even", "odd") %>">
+            <td><%= ticket_state.name %></td>
+
+            <td><%= link_to 'Edit', edit_ticket_state_path(ticket_state) %></td>
+            <% if session[:role_name] == 'admin' %>
+                <td><%= link_to 'Destroy', ticket_state, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+            <% end %>
+          </tr>
+      <% end %>
+
+      </tbody>
+    </table>
+<% end %>
 
 <br>
 
 <%= link_to 'Home', action: 'index', controller: 'welcome' %>
-| <%= link_to 'New Ticket State', new_ticket_state_path %>
+<% if session[:role_name] == 'admin' %>
+    | <%= link_to 'New Ticket State', new_ticket_state_path %>
+<% end %>
