--- a/app/views/tickets/edit.html.erb
+++ b/app/views/tickets/edit.html.erb
@@ -23,18 +23,18 @@
   <strong>
   <p>
     <%= f.label :'E-mail' %>:
-    <%= @ticket.email %>
+    <%= h @ticket.email %>
   </p>
 
   <p>
     <%= f.label :Subject %>:
-    <%= @ticket.subject %>
+    <%= h @ticket.subject %>
   </p>
 
   <p>
     <%= f.label :Problem %><br>
     <%#= f.text_area :problem, cols: 60, rows: 10 %>
-    <%= @ticket.problem %>
+    <%= h @ticket.problem %>
   </p>
   </strong>
 
