--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,12 +1,14 @@
-<% unless session[:user_id] %>
-  <h1>You problem has reported to the support team:</h1>
+<% if flash[:notice] %>
+        <p class="notification notice">
+          <%= flash[:notice] %>
+        </p>
 <% end %>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', controller: 'tickets' %>
+<%= link_to 'Back', controller: 'welcome', action: 'index', anchor: 'tickets' %>
 
 <% unless session[:user_id] %>
-<%= link_to 'Home', controller: 'welcome' %>
+<%= link_to 'Home', controller: 'welcome', action: 'index', anchor: 'home' %>
 | <%= link_to 'New ticket', action: 'new', controller: 'tickets' %>
 <% end %>
